--- a/index.html
+++ b/index.html
@@ -8,9 +8,23 @@
 </head>
 <body>
     <header>
-        <article class="Iconoheader"><span>Inicio</span></article>
-        <article class="Iconoheader"><span>Novedades</span></article>
-        <article class="Iconoheader"><span>Comunidad y Proyecto</span></article>
+        <div class="Categoria">
+            <span>Inicio</span>
+        </div>
+        <div class="Categoria">
+            <span>Novedades</span>
+        </div>
+        <div class="Categoria">
+            <span>Comunidad y Proyectos</span>
+        </div>
     </header>
+    <main>     
+       <div class="Frase">
+        La educacion nos hace libres, nos da voz y nos hace pensar.
+       </div>
+       <div class="ImagenEscuela">
+        <img src="assets/img/FrenteEscuela.jpg" alt="">
+       </div> 
+    </main>
 </body>
 </html>
