--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,12 +19,12 @@
         </div>
     </header>
     <main>     
-       <div class="Frase">
-        La educacion nos hace libres, nos da voz y nos hace pensar.
-       </div>
-       <div class="ImagenEscuela">
-        <img src="assets/img/FrenteEscuela.jpg" alt="">
-       </div> 
+        <div class="Frase">
+            La educacion nos hace libres, nos da voz y nos hace pensar.
+        </div>
+        <div class="ImagenEscuela">
+            <img src="assets/img/FrenteEscuela.jpg" alt="">
+        </div> 
     </main>
 </body>
 </html>
