--- a/registration/register.html
+++ b/registration/register.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,6 +19,7 @@
                 <button type="submit">Enviar</button>
             </form>
         </section>
+
     </main>
 </body>
 </html>
